# workflow-test

./: CMakeLists.txt
.github/workflows/: build.yml
src/: main.cpp  mainwin.cpp  mainwin.hpp
